# zigfi

./: Cargo.toml  LICENSE  PKGBUILD  README.md  output.txt
.rpm/: zigfi.spec
src/: format.rs  lib.rs  main.rs  output.rs  terminal.rs  yahoo.rs
