[package]
name = "zigfi"
description = "zigfi is an open-source stocks, commodities and cryptocurrencies price monitoring CLI app, written fully in Rust, where you can organize assets you're watching easily into watchlists."
version = "0.1.0"
authors = ["Aldrin Zigmund Cortez Velasco <aldrinzigmund@tutamail.com>"]
license = "AGPL-3.0-or-later"
edition = "2021"
homepage = "https://github.com/aldrinzigmundv/zigfi"
repository = "https://github.com/aldrinzigmundv/zigfi"
categories = ["command-line-interface"]
keywords = ["finance", "stock", "cli", "app", "crypto"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zigarg = "1.0.0"
tokio = { version = "1.15.0", features = ["full"] }
confy = "0.4.0"
serde = { version = "1.0.132", features = ["derive"] }
crossterm = "0.22.1"
yahoo_finance_api = "1.2.2"
chrono = "0.4.19"